--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 												<li class="active"><a href="#banner">Home</a></li>
 												<li><a href="#services">Services</a></li>
 												<li><a href="#about">About</a></li>
-												<li><a href="#testimonials">Testimonials</a></li>												
 												<li><a href="#portfolio">Portfolio</a></li>
+												<li><a href="#testimonials">Testimonials</a></li>												
 												<li><a href="#price">Price</a></li>
 												<li><a href="#contact">Contact</a></li>
 											</ul>
@@ -105,7 +105,7 @@
 								<h1>We are AWESOME!</h1>
 								<h3 class="padding-top30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/> Eos debitis provident nulla illum minus.</h3>
 								<div class="padding-top60 contact-form">
-									<button class="btn cta-button">CLICK HERE</button>
+									<button class="btn cta-button"><a href="#contact">CLICK HERE</a></button>
 								</div>
 							</div>
 					</div>
