--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<div class="caption-data" style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
 								<h1>We are AWESOME!</h1>
 								<h3 class="padding-top30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/> Eos debitis provident nulla illum minus.</h3>
-								<div class="padding-top60 contact-form">
+								<div class="padding-top60 contact-form scrollspy smooth-scroll">
 									<button class="btn cta-button"><a href="#contact">CLICK HERE</a></button>
 								</div>
 							</div>
