--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<p class="text-center">Built with a lot of passion by <a target="_blank" href="https://www.instagram.com/kris.nemmaluri/">Kris</a> with the help of Open Source Community.</p>
+							<p class="text-center">Built with passion by <a target="_blank" href="https://www.instagram.com/theonlykris/">Kris</a> with the help of Open Source Community.</p>
 						</div>
 					</div>
 				</div>
